<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github</groupId>
	<artifactId>keystore-ssl-ssh-report</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<maven.compiler.source>8</maven.compiler.source>
		<maven.compiler.target>8</maven.compiler.target>
		<sonar.organization>asdf913</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>
	<dependencies>
		<!--https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.20.0</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/commons-validator/commons-validator -->
		<dependency>
			<groupId>commons-validator</groupId>
			<artifactId>commons-validator</artifactId>
			<version>1.11.0</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/io.github.toolfactory/narcissus-->
		<dependency>
			<groupId>io.github.toolfactory</groupId>
			<artifactId>narcissus</artifactId>
			<version>1.0.13</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.d2ab/sequence -->
		<dependency>
			<groupId>org.d2ab</groupId>
			<artifactId>sequence</artifactId>
			<version>2.3.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.logevents/logevents -->
		<dependency>
			<groupId>org.logevents</groupId>
			<artifactId>logevents</artifactId>
			<version>0.5.9</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.apache.sshd/sshd-core -->
		<dependency>
			<groupId>org.apache.sshd</groupId>
			<artifactId>sshd-core</artifactId>
			<version>2.19.0</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.apache.sshd/sshd-sftp -->
		<dependency>
			<groupId>org.apache.sshd</groupId>
			<artifactId>sshd-sftp</artifactId>
			<version>2.19.0</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.22.0</version>
		</dependency>
		<!--https://mvnrepository.com/artifact/org.testng/testng -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.5.1</version>
			<scope>test</scope>
		</dependency>
		<!--https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>33.7.1-jre</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>